--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -1,65 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp" >
+    android:padding="10dp"
+    android:background="@drawable/rounded_border"
+    android:animateLayoutChanges="true">
 
-    <!-- Book Image -->
-    <ImageView
-        android:id="@+id/imageViewBookCover"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="fitCenter"
-        android:contentDescription="Book Image" />
-
-    <!-- Table Structure for Book Data -->
-    <TableLayout
+    <!-- Book Cover and Basic Info -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="1">
+        android:layout_height="wrap_content">
 
-        <TableRow>
-            <TextView
-                android:text="Title:"
-                android:textStyle="bold"
-                android:layout_marginEnd="8dp" />
+        <ImageView
+            android:id="@+id/imageViewBookCover"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_marginEnd="10dp"
+            android:contentDescription="Book Cover"
+            android:src="@drawable/placeholder"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/imageViewBookCover"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/textViewTitle"
-                android:text="Title Placeholder" />
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:text="Author:"
                 android:textStyle="bold"
-                android:layout_marginEnd="8dp" />
+                android:text="Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
             <TextView
                 android:id="@+id/textViewAuthor"
-                android:text="Author Placeholder" />
-        </TableRow>
+                android:text="Author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-        <TableRow>
-            <TextView
-                android:text="First Published:"
-                android:textStyle="bold"
-                android:layout_marginEnd="8dp" />
             <TextView
                 android:id="@+id/textViewFirstPublishYear"
-                android:text="Year Placeholder" />
-        </TableRow>
+                android:text="Year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </RelativeLayout>
 
-        <TableRow>
-            <TextView
-                android:text="ISBN:"
-                android:textStyle="bold"
-                android:layout_marginEnd="8dp" />
-            <TextView
-                android:id="@+id/textViewISBN"
-                android:text="ISBN Placeholder" />
-        </TableRow>
+    <!-- Expanded Section -->
+    <LinearLayout
+        android:id="@+id/expandedLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:paddingTop="10dp">
 
-    </TableLayout>
+        <TextView
+            android:id="@+id/textViewSubject"
+            android:text="Subject: N/A"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textViewFirstSentence"
+            android:text="First Sentence: N/A"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textViewISBN"
+            android:text="ISBN: N/A"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </LinearLayout>
+
