--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -1,24 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-<!-- Back Arrow -->
-    <ImageButton
-        android:id="@+id/buttonBack"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:src="@drawable/ic_go_back_arrow"
-        android:contentDescription="Back"
-        android:layout_margin="8dp" />
-
-    <!-- RecyclerView for Book List -->
+    <!-- Book List (RecyclerView) -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewBooks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/buttonBack" />
+        android:clipToPadding="false"
+        android:paddingTop="16dp"
+        android:overScrollMode="never"
+        tools:ignore="NotSibling" />
 
-</RelativeLayout>
+    <!-- Back Button (floating over RecyclerView) -->
+    <ImageButton
+        android:id="@+id/buttonBack"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:src="@drawable/ic_back_arrow"
+        android:contentDescription="Back Button"
+        android:layout_margin="16dp"
+        android:elevation="8dp"
+        android:layout_gravity="start|top"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        app:tint="@android:color/black" />
+</FrameLayout>
