--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -74,6 +74,16 @@
             android:text="ISBN: N/A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/buttonSaveBook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="end"
+            android:src="@drawable/ic_bookmark_empty"/>
+
     </LinearLayout>
 
 </LinearLayout>
