--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,4 +8,8 @@
         android:id="@+id/nav_search"
         android:title="Search"
         android:icon="@drawable/ic_search" />
+    <item
+        android:id="@+id/nav_save"
+        android:title="Save"
+        android:icon="@drawable/ic_bookmark_empty" />
 </menu>
